--- a/app/javascript/styles/components/visualizations/MapboxGL.scss
+++ b/app/javascript/styles/components/visualizations/MapboxGL.scss
@@ -1,23 +1,18 @@
-$mapHeight: calc(94vw * 500 / 700);
-
 .mapboxgl {
   &__container {
     @include media(medium) {
       display: block;
       float: unset;
-      height: $mapHeight;
+      height: calc(94vw * 500 / 700);
       margin: 0 auto;
       max-height: 500px;
       max-width: 700px;
       width: 100%;
     }
-    border: 0;
-    float: left;
     height: 500px;
-    margin: 0 32px 32px 0;
     width: 700px;
-    z-index: 10;
   }
+
   &__tooltip {
     background: #fff;
     border: 0;
